# TUI_SSD

./: pyproject.toml
tests/: test_tui_ssd.py
tests/tui_ssd/: test_app.py  test_domain.py  test_menu.py
tui_ssd/: app.py  domain.py  menu.py
validation/: regex.py
