[tool.poetry]
name = "TUI_SSD"
version = "0.1.0"
description = ""
authors = ["GiovanniCrudo00 <crugio23@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
typeguard = "^4.1.5"
valid8 = "^5.1.2"
pytest = "^7.4.3"
coverage = "^7.3.3"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
